Bug 327718 - Error 'Open Database'
Summary: Error 'Open Database'
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-11-17 10:17 UTC by Jub
Modified: 2013-12-06 04:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jub 2013-11-17 10:17:48 UTC
Application: kmymoney (4.6.3)
KDE Platform Version: 4.11.2
Qt Version: 4.8.4
Operating System: Linux 3.11.0-13-generic i686
Distribution: Ubuntu 13.10

-- Information about the crash:
When I want to Open a Database type QSLite Version 3.


I have the error :

Error in function void MyMoneyStorageSql::createTable(const MyMoneyDbTable&, int) : creating table/index kmmAccounts Driver = QSQLITE, Host = localhost, User = jub, Database = /home/jub/Documents/Comptes/zzz Base de donnée zzz/jub.kmy Driver Error: Database Error No -1: Text: Error type 0 Executed: Query error No 26: file is encrypted or is not a database Impossible d'exécuter l'instruction Error type 2 dans le fichier /build/buildd/kmymoney-4.6.3/kmymoney/mymoney/storage/mymoneystoragesql.cpp à la ligne 738

The crash can be reproduced every time.

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Aborted
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb3d51740 (LWP 2160))]

Thread 4 (Thread 0xb1ae4b40 (LWP 2169)):
#0  0xb47b2de3 in __GI___pthread_mutex_lock (mutex=0x8971770) at pthread_mutex_lock.c:95
#1  0xb5295bc4 in pthread_mutex_lock (mutex=0x8971770) at forward.c:192
#2  0xb4724bb0 in g_mutex_lock () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb46e0b5d in g_main_context_acquire () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb46e1a08 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb46e204b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#6  0xb250932a in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#7  0xb4707c4a in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0xb47b0d78 in start_thread (arg=0xb1ae4b40) at pthread_create.c:311
#9  0xb528801e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:131

Thread 3 (Thread 0xb1074b40 (LWP 2171)):
#0  0xb4724aae in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb47250f8 in g_private_get () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb47081be in g_thread_self () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb46e0b4b in g_main_context_acquire () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb46e1a08 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb46e1ca8 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#6  0xb46e1d2e in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0xb4707c4a in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0xb47b0d78 in start_thread (arg=0xb1074b40) at pthread_create.c:311
#9  0xb528801e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:131

Thread 2 (Thread 0xace12b40 (LWP 3001)):
#0  0xb52c4173 in __x86.get_pc_thunk.bx () from /lib/i386-linux-gnu/libc.so.6
#1  0xb529b4ba in clock_gettime (clock_id=1, tp=0xace11fc8) at ../sysdeps/unix/clock_gettime.c:93
#2  0xb60843ec in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#3  0xb6169fd2 in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#4  0xb616867b in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#5  0xb616870d in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#6  0xb46e1143 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#7  0xb46e1a5f in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0xb46e1ca8 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0xb61688df in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#10 0xb61379f3 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#11 0xb6137d19 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#12 0xb6026e3d in QThread::exec() () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#13 0xb6117e14 in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#14 0xb602972f in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#15 0xb47b0d78 in start_thread (arg=0xace12b40) at pthread_create.c:311
#16 0xb528801e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:131

Thread 1 (Thread 0xb3d51740 (LWP 2160)):
[KCrash Handler]
#6  0xb775b424 in __kernel_vsyscall ()
#7  0xb51c4aff in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#8  0xb51c8083 in __GI_abort () at abort.c:90
#9  0xb53f6605 in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#10 0xb53f4273 in ?? () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#11 0xb53f42af in std::terminate() () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#12 0xb53f450e in __cxa_throw () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#13 0x08088809 in main (argc=1, argv=0xbf88fa64) at /build/buildd/kmymoney-4.6.3/kmymoney/main.cpp:185

Possible duplicates by query: bug 327574, bug 326518, bug 324432, bug 324013, bug 323830.

Reported using DrKonqi
Comment 1 Fernando Vilas 2013-11-17 16:58:33 UTC
Is the .kmy file you are trying to open a database? I would also recommend naming it something else, since .kmy is the default for the XML backend.

In terms of the crash, I think that part is related to another bug that I am working on.
Comment 2 Fernando Vilas 2013-12-06 04:30:53 UTC
Git commit 88b8f16696f7ba5fb97f351e03877de573799491 by Fernando Vilas.
Committed on 06/12/2013 at 04:29.
Pushed by fvilas into branch 'master'.

Fix crashes from uncaught exceptions opening files/databases.
Related: bug 327494

M  +15   -10   kmymoney/kmymoney.cpp
M  +24   -0    kmymoney/mymoney/storage/mymoneydatabasemgrtest.cpp
M  +1    -0    kmymoney/mymoney/storage/mymoneydatabasemgrtest.h

http://commits.kde.org/kmymoney/88b8f16696f7ba5fb97f351e03877de573799491