Fix crashes from uncaught exceptions opening files/databases.

BUG: 327718
BUG: 327494